# rycst-rs

./: Cargo.toml
assets/maps/: many_walls.json  standard.json
src/: app.rs  cast.rs  config.rs  direction.rs  draw.rs  engine.rs  ext.rs  funky_lines.rs  input.rs  key_state_handler.rs  main.rs  map.rs  player.rs  state.rs  util.rs  vec2d.rs
src/map/: mod.rs  wall.rs
src/math/: mod.rs  vector.rs  wall.rs
src/render/: ext.rs  mod.rs
