[package]
name = "rycst-rs"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.3.2", features = [ "opengl" ] }
ncollide2d = "0.22" 
nalgebra = "0.20" 

[profile.dev]
opt-level = 2