[package]
name = "rycst-rs"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.4.0", features = [ "opengl", "debug" ] }

[profile.dev]
opt-level = 2