[package]
name = "raycast"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.34.5", features = [ 'ttf']}
rand = "*"
line_intersection = "0.4.0"
geo = "0.4.13"
num-traits = "0.1.43"
factor = "0.4.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"